  `comma_format`, `dollar_format`, `percent_format`, `scientific_format`,
  `parse_format` and `math_format` for examples

* transformations now provided by the scales package - see `?trans_new` for
  list of available transformations, and how to create your own. The
  transformations in this package should do a better job at computing default
  breaks.

* all scales now accept `na.value` parameter which provides an aesthetic value
  to be used for NA values in the data. Colour/fill scales default to values
  that should stand out as being different from non-missing values.

* the new `oob` (out of bounds) parameter controls how scales deals with
  values outside the limits. The default action is `censor` - see `clip` for
  another option.

* only `scale_x_log10`, `scale_x_sqrt` and `scale_x_reverse` provided as
  convenience functions for x and y scales. Use `scale_x_continuous(trans =
  "log")` to access others

* `set_default_scale` has been removed. If you want to change the default
  scale for an aesthetic, just create a function called
  `scale_aesthetic_continuous` or `scale_aesthetic_discrete` that returns the
  scale that you want.  For example:
  
      p <- qplot(mpg, wt, data = mtcars, colour = factor(cyl))
      p
      scale_colour_discrete <- scale_colour_brewer
      p

FACETS

* Converted from proto to S3 objects, and class methods (somewhat) documented
  in `facet.r`. This should make it easier to develop new types of facetting
  specifications.

* New `facet_null` used when for no facetting. This special case is
  implemented more efficiently and results in substantial performance
  improvements for un-facetted plots.

* Facetting variables will no longer interfere with aesthetic mappings - 
  `facet_wrap(~ colour)` will no longer affect the colour of points.

COORDS

* Converted from proto to S3 objects, and class methods (somewhat) documented
  in `coord.r`. This should make it easier to develop new types of coordinate
  systems.

RENDERING 
